<resources>
    <string name="app_name">Jamnadas Connect</string>
    <string name="imgcd_image">Content description of images</string>
    <string name="no_intrnt_cnctn">No internet connection</string>
    <string name="server_problem_sml">There are some server problem.</string>
    <string name="internal_problem_sml">There are some internal problem.</string>
    <string name="indevlpmnt_sml">In Development</string>
    <string name="please_wait_3dots">Please wait&#8230;</string>
    <string name="add_sml">Add</string>
    <string name="cancel_sml">Cancel</string>
    <string name="selctd_file_mustbe_lessthan_5mb">Selected file must be less than 5MB!</string>

    <!--Sign In-->
    <string name="mobileno_sml">Mobile Number</string>
    <string name="cntrycode_india">+91</string>
    <string name="entr_mobile_sml">Enter mobile</string>
    <string name="invalid_mobile">Invalid mobile number</string>
    <string name="password_sml">Password</string>
    <string name="entr_password_sml">Enter password</string>
    <string name="password_6chars_long">Password must be 6 Characters long</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="signin_sml">Login</string>
    <string name="forgot_password_sml">Forgot password?</string>
    <string name="notmember_registernow">Not yet member? Create free account!</string>
    <string name="signup_sml">Signup</string>
    <string name="create_an_account_sml">Create an account</string>

    <!--Sign Up-->
    <string name="firstname_sml">First name</string>
    <string name="entr_firstname_sml">Enter first name</string>
    <string name="lastname_sml">Last name</string>
    <string name="entr_lastname_sml">Enter last name</string>
    <string name="schoolname_sml">School/Institute name</string>
    <string name="entr_schoolname_sml">Enter School/Institute name</string>
    <string name="city_sml">City</string>
    <string name="entr_city_sml">Enter city</string>
    <string name="email_sml">Email</string>
    <string name="invalid_email">Invalid email</string>
    <string name="mobileno_verfd_sucsfly">Mobile number verified successfully</string>
    <string name="mobileno_not_verfd">Mobile number not verified</string>
    <string name="exist_sml">exist</string>
    <string name="sucsfly_regstr_sml">Successfully registration.</string>

    <!-- Mobile Verification -->
    <string name="verify_mobile_sml">Verify Mobile</string>
    <string name="carrier_charges_apply">Jamnadas Connect will send a one time password to verify mobile number. Carrier SMS charges may apply.</string>
    <string name="waiting_auto_detect_sms">Waiting to automatically detect an SMS sent</string>
    <string name="resend_sml">Resend</string>
    <string name="verfctn_code">Verification Code</string>
    <string name="sending_sms_fail">Sending SMS failed, please try again.</string>
    <string name="auto_detect_sms_fail">Auto detect SMS failed, please try again.</string>
    <string name="entr_verfctn_code_if_fail_toautodetect">Enter the verification code below in case if we fail to detect the SMS automatically.</string>
    <string name="entr_verfctn_code">Enter verification code</string>
    <string name="invalid_verfctn_code">Invalid verification code</string>
    <string name="submit_sml">Submit</string>
    <string name="working_sms_plan">Please make sure you have a working SMS plan.\nSit back and relax. We\'ll notify you when we\'re done verifying.</string>
    <string name="no_detect_any_mobileno">Not detected any mobile number</string>
    <string name="allow_permtn_sms">To verify mobile number, you must have to allow SMS permission</string>
    <string name="vrfymobile_sms_msg">One Time Password for your %1$s registration  is %2$d. Please use this password to complete your Registration.</string>
    <string name="vrfymobile_sms_startformt_msg">One Time Password for your %1$s</string>
    <string name="is_sml">is</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Navigation Drawer Menu-->
    <string name="dashboard_sml">Dashboard</string>
    <string name="book_sml">Book</string>
    <string name="specimen_copy_sml">Specimen Copy</string>
    <string name="news_sml">News</string>
    <string name="book_correction_sml">Book Correction</string>
    <string name="teacher_sml">Teacher</string>
    <string name="suggestions_sml">Suggestions</string>
    <string name="myprofile_sml">My Profile</string>
    <string name="logout_sml">Logout</string>

    <!--Specimen Copy-->
    <string name="book_name_sml">Book name</string>
    <string name="entr_book_name_sml">Enter book name</string>
    <string name="comnts_sml">Comments</string>
    <string name="edit_profile_sml">Edit Profile</string>
    <string name="edit_profile_miss_data_msg">We need some information to confirm and send specimen copy to you. Please provide us remaining details.</string>
    <string name="goto_profile_sml">Go to profile</string>

    <!--News-->
    <string name="news_appear_here">News appear here</string>
        <!--News Details-->
        <string name="news_dtls_sml">News Details</string>
        <string name="title_sml">Title</string>
        <string name="entr_title_sml">Enter title</string>

    <!--My Profile-->
    <string name="basic_dtls_sml">Basic Details</string>
    <string name="birthday_sml">Birthday</string>
    <string name="invalid_birthday_sml">Age must be greater than 18 years.</string>
    <string name="select_birthday_sml">Select birthday</string>
    <string name="education_dtls_sml">Education Details</string>
    <string name="invalid_date">Invalid date</string>
    <string name="experience_sml">Experience</string>
    <string name="entr_experience_sml">Enter experience</string>
    <string name="area_of_Interest">Area Of Interest</string>
    <string name="entr_area_of_interest">Enter area of interest</string>
    <string name="eductn_qualfctn_sml">Educational Qualification</string>
    <string name="entr_eductn_qualfctn_sml">Enter educational qualification</string>
    <string name="achievmnts_sml">Achievements</string>
    <string name="contact_dtls_sml">Contact Details</string>
    <string name="adrs_line_1_sml">Address Line 1</string>
    <string name="entr_adrs_line_1_sml">Enter Address Line 1</string>
    <string name="adrs_line_2_sml">Address Line 2</string>
    <string name="state_sml">State</string>
    <string name="entr_state_sml">Enter state</string>
    <string name="country_sml">Country</string>
    <string name="entr_country_sml">Enter country</string>
    <string name="pincode_sml">Pincode</string>
    <string name="entr_pincode_sml">Enter pincode</string>
    <string name="invalid_pincode">Invalid pincode</string>
    <string name="work_dtls_sml">Work Details</string>
    <string name="add_more_sml">Add more</string>
    <string name="work_dtls_appear_here">Work details appear here</string>
    <string name="select_medium_sml">Select medium</string>
    <string name="no_data_avlbl_refresh">No data available, Please Refresh.</string>
    <string name="medium_sml">Medium</string>
    <string name="select_standard_sml">Select standard</string>
    <string name="standr_sml">Standard</string>
    <string name="subject_sml">Subject</string>
    <string name="entr_subject_sml">Enter Subject</string>
    <string name="allow_permtn_myprofile">To add a profile picture, you must have to allow permissions</string>
    <string name="plz_add_work_dtls">Please add Work details</string>
    <string name="profile_updated_sml">Profile updated successfully.</string>

    <!--Book Correction-->
    <string name="attachment_sml">Attachment</string>
    <string name="camera_sml">Camera</string>
    <string name="gallery_sml">Gallery</string>
    <string name="note_sml">Note</string>
    <string name="bookcrctn_note_dialog_msg">If you have any suggestions for our books, please write the name of the book and attach a picture of the mistake or suggestion.</string>
    <string name="allow_permtn_atchmnt">To add an attachment, you must have to allow permissions</string>
    <string name="attchd_imgs_appear_here">Attached images appear here</string>
    <string name="cant_add_morethan_10_items">Can\'t add more than 10 media items</string>
    <string name="preview_sml">Preview</string>
    <string name="remove_sml">Remove</string>
    <string name="record_sml">Record</string>
    <string name="play_sml">Play</string>
    <string name="stop_sml">Stop</string>
    <string name="remaining_time_sml">Remaining time</string>
    <string name="three_min_zero_sec">3:00</string>
    <string name="audio_record_problem_sml">There are some problem for record audio.</string>
    <string name="playing_audio_recorded_problem_sml">There are some problem for playing recorded audio.</string>
    <string name="recrdng_attached_sml">1 recording attached.</string>

    <!--Teacher Suggestions-->
    <string name="descrptn_sml">Description</string>
    <string name="entr_descrptn_sml">Enter description</string>

    <!--Logout-->
    <string name="logout_alrtdlg_msg">Do you want to logout?</string>
    <string name="no_sml">No</string>

    <!--Menu Action-->
    <string name="save_sml">Save</string>
    <string name="refresh_sml">Refresh</string>
</resources>
