<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2017 Jalotsav
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_nvgtndrwr_dashboard"
        android:checkable="true"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/dashboard_sml" />

    <item android:title="@string/book_sml">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_nvgtndrwr_specimen_copy"
                    android:icon="@drawable/ic_folder_open_black_56dp"
                    android:title="@string/specimen_copy_sml" />
                <item
                    android:id="@+id/action_nvgtndrwr_book_corectn"
                    android:icon="@drawable/ic_playlist_add_check_black_56dp"
                    android:title="@string/book_correction_sml" />
            </group>
        </menu>
    </item>

    <item android:title="@string/teacher_sml">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_nvgtndrwr_teacher_sugstn"
                    android:icon="@drawable/ic_school_black_56dp"
                    android:title="@string/suggestions_sml" />
                <item
                    android:id="@+id/action_nvgtndrwr_news"
                    android:icon="@drawable/ic_notifications_black_56dp"
                    android:title="@string/news_sml" />
                <item
                    android:id="@+id/action_nvgtndrwr_teacher_profile"
                    android:icon="@drawable/ic_account_circle_black_56dp"
                    android:title="@string/myprofile_sml" />
                <item
                    android:id="@+id/action_nvgtndrwr_teacher_logout"
                    android:icon="@drawable/ic_power_settings_new_black_24dp"
                    android:title="@string/logout_sml" />
            </group>
        </menu>
    </item>
</menu>