<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2017 Jalotsav
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/drwbl_appshrtct_notifications"
        android:shortcutId="appshrtct_news"
        android:shortcutShortLabel="@string/news_sml">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.jalotsav.jamnadasconnect.ActvtyMain"
            android:targetPackage="com.jalotsav.jamnadasconnect">
            <extra
                android:name="navdrawerPosition"
                android:value="24" />
        </intent>
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/drwbl_appshrtct_playlist_add_check"
        android:shortcutId="appshrtct_book_corectn"
        android:shortcutShortLabel="@string/book_correction_sml">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.jalotsav.jamnadasconnect.ActvtyMain"
            android:targetPackage="com.jalotsav.jamnadasconnect">
            <extra
                android:name="navdrawerPosition"
                android:value="23" />
        </intent>
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/drwbl_appshrtct_folder_open"
        android:shortcutId="appshrtct_specimen_copy"
        android:shortcutShortLabel="@string/specimen_copy_sml">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.jalotsav.jamnadasconnect.ActvtyMain"
            android:targetPackage="com.jalotsav.jamnadasconnect">
            <extra
                android:name="navdrawerPosition"
                android:value="22" />
        </intent>
    </shortcut>
</shortcuts>