<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2017 Jalotsav
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120jdp"
        android:background="@color/colorPrimaryBlue"
        android:gravity="center"
        android:orientation="vertical">

        <!--School name-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtinputlyot_dialog_workdtls_schoolname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16jdp"
            android:layout_marginLeft="@dimen/_32jdp"
            android:layout_marginRight="@dimen/_16jdp"
            android:layout_marginStart="@dimen/_32jdp"
            app:hintTextAppearance="@style/MaterialText.Amber">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtinptet_dialog_workdtls_schoolname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/schoolname_sml"
                android:inputType="textMultiLine"
                android:maxLines="2"
                android:textColor="@color/white"
                android:textColorHint="@color/grayA8"
                android:textSize="@dimen/_20jdp" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_16jdp"
        android:layout_marginRight="@dimen/_16jdp"
        android:layout_marginTop="@dimen/_10jdp"
        android:orientation="vertical">

        <!--Stream-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtinputlyot_dialog_workdtls_stream"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtinptet_dialog_workdtls_stream"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/stream_sml"
                android:inputType="text"
                android:textColorHint="@color/grayA8"
                android:textSize="@dimen/_14jdp" />
        </android.support.design.widget.TextInputLayout>

        <!--Standard-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtinputlyot_dialog_workdtls_standr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtinptet_dialog_workdtls_standr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/standr_sml"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textColorHint="@color/grayA8"
                android:textSize="@dimen/_14jdp" />
        </android.support.design.widget.TextInputLayout>

        <!--Subject-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtinputlyot_dialog_workdtls_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtinptet_dialog_workdtls_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/subject_sml"
                android:inputType="text"
                android:textColorHint="@color/grayA8"
                android:textSize="@dimen/_14jdp" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/_8jdp"
        android:layout_marginRight="@dimen/_8jdp"
        android:layout_marginTop="@dimen/_24jdp"
        android:layout_marginBottom="@dimen/_8jdp"
        android:orientation="horizontal">

        <!--Cancel-->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appcmptbtn_dialog_workdtls_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:text="@string/cancel_sml"
            android:textColor="@color/colorPrimaryBlue"
            android:textSize="@dimen/_14jdp" />

        <!--Add-->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appcmptbtn_dialog_workdtls_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:text="@string/add_sml"
            android:textColor="@color/colorPrimaryBlue"
            android:textSize="@dimen/_14jdp" />
    </LinearLayout>
</LinearLayout>