<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2017 Jalotsav
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Attach Image-->
    <LinearLayout
        android:id="@+id/lnrlyot_frgmnt_bookcorctn_attachimage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <com.jalotsav.jamnadasconnect.common.RecyclerViewEmptySupport
            android:id="@+id/rcyclrvw_frgmnt_bookcorctn_attchdimgs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/lo_recyclritem_bookcorctn_attchdimgs" />

        <include
            layout="@layout/lo_recyclremptyvw_appearhere"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <!--Attach/Record Audio-->
    <LinearLayout
        android:id="@+id/lnrlyot_frgmnt_bookcorctn_attachaudio"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <!--Record-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgvw_frgmnt_bookcorctn_attachaudio_startstop"
                    android:layout_width="@dimen/_65jdp"
                    android:layout_height="@dimen/_65jdp"
                    android:contentDescription="@string/imgcd_image"
                    app:srcCompat="@drawable/ic_microphone_flat_128dp" />

                <TextView
                    android:id="@+id/tv_frgmnt_bookcorctn_attachaudio_lblstartstop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5jdp"
                    android:text="@string/record_sml"
                    android:textColor="@color/gray5B"
                    android:textSize="@dimen/_14jdp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnrlyot_frgmnt_bookcorctn_attachaudio_mainplaystop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <View
                    android:layout_width="@dimen/_1jdp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_10jdp"
                    android:background="@color/grayA8" />

                <!--Play-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgvw_frgmnt_bookcorctn_attachaudio_playstop"
                        android:layout_width="@dimen/_65jdp"
                        android:layout_height="@dimen/_65jdp"
                        android:contentDescription="@string/imgcd_image"
                        app:srcCompat="@drawable/ic_play_flat_128dp" />

                    <TextView
                        android:id="@+id/tv_frgmnt_bookcorctn_attachaudio_lblplaystop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5jdp"
                        android:text="@string/play_sml"
                        android:textColor="@color/gray5B"
                        android:textSize="@dimen/_14jdp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/prgrsbr_frgmnt_bookcorctn_attachaudio_recordprgrs"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="180"
            android:progress="180" />

        <RelativeLayout
            android:id="@+id/rltvlyot_frgmnt_bookcorctn_attachaudio_timeremain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5jdp">

            <TextView
                android:id="@+id/tv_frgmnt_bookcorctn_attachaudio_timeremain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/three_min_zero_sec"
                android:textColor="@color/gray5B"
                android:textSize="@dimen/_12jdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@id/tv_frgmnt_bookcorctn_attachaudio_timeremain"
                android:layout_toStartOf="@id/tv_frgmnt_bookcorctn_attachaudio_timeremain"
                android:text="@string/remaining_time_sml"
                android:textColor="@color/gray5B"
                android:textSize="@dimen/_12jdp" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>